[gd_scene load_steps=15 format=3 uid="uid://doxg561wf43a4"]

[ext_resource type="Script" path="res://animation_controller_defense.gd" id="1_lapkh"]
[ext_resource type="AnimationLibrary" uid="uid://crri5mft4ecjr" path="res://animations/defense_lib.res" id="2_ilbp7"]
[ext_resource type="Texture2D" uid="uid://nb7t8xgq5g1s" path="res://assets/s1spritesheet.png" id="4_h4rsj"]
[ext_resource type="Texture2D" uid="uid://ctmkk2g2avfyt" path="res://assets/texture_lib/shield_break_start.png" id="10_hcyqw"]
[ext_resource type="Texture2D" uid="uid://bh35r23qxfma6" path="res://assets/texture_lib/shield.png" id="11_7sxd1"]
[ext_resource type="Texture2D" uid="uid://qaxd3ogv72gu" path="res://assets/texture_lib/shield_break_end.png" id="12_icwp2"]
[ext_resource type="Texture2D" uid="uid://d2xaqv02kpvao" path="res://assets/heart.png" id="12_my3b0"]
[ext_resource type="Texture2D" uid="uid://drrx5sk37x60c" path="res://assets/texture_lib/v_hit_2.png" id="13_cgq4l"]
[ext_resource type="Texture2D" uid="uid://cpbh17wlk88u3" path="res://assets/texture_lib/melee_hit.png" id="14_w88ca"]
[ext_resource type="Texture2D" uid="uid://b0d665ajmdk08" path="res://assets/texture_lib/c_hit.png" id="15_emw40"]
[ext_resource type="Texture2D" uid="uid://cb0ak6uyy3sge" path="res://assets/texture_lib/v_hit.png" id="16_qbmdm"]
[ext_resource type="Texture2D" uid="uid://bvlhrva0adjub" path="res://assets/texture_lib/self_destruct.png" id="28_cydpn"]

[sub_resource type="Animation" id="Animation_cxqls"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xj7mx"]
_data = {
"RESET": SubResource("Animation_cxqls")
}

[node name="defense" type="Node2D"]
script = ExtResource("1_lapkh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xj7mx"),
"defense_lib": ExtResource("2_ilbp7")
}

[node name="death" type="Sprite2D" parent="."]
visible = false
position = Vector2(-0.5, -1.5)
texture = ExtResource("28_cydpn")
hframes = 14
frame = 4

[node name="shield_break_start" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("10_hcyqw")
hframes = 15
vframes = 9
frame = 134

[node name="shield" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("11_7sxd1")
hframes = 18
vframes = 9
frame = 43

[node name="shield_break_end" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("12_icwp2")
hframes = 15
vframes = 9
frame = 43

[node name="v_hit" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
texture = ExtResource("13_cgq4l")
hframes = 19
vframes = 9
frame = 56

[node name="p_hit" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("14_w88ca")
hframes = 17
vframes = 9
frame = 1

[node name="c_hit" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("15_emw40")
flip_h = true
hframes = 14
vframes = 9
frame = 111

[node name="mask" type="Sprite2D" parent="."]
clip_children = 1
texture = ExtResource("4_h4rsj")
hframes = 7
vframes = 3

[node name="v_hit" type="Sprite2D" parent="mask"]
visible = false
texture = ExtResource("16_qbmdm")
hframes = 17
vframes = 9
frame = 34

[node name="heart" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.2, 0.305882, 0)
texture = ExtResource("12_my3b0")
hframes = 2
vframes = 2

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
